# spacec

./: README.md
.github/workflows/: fenobam.yml  kcccxx.yml
docs/spec/: lang.rst
inc/: ast.hpp  binop.hpp  codegen.hpp  lexer.hpp  parser.hpp  type.hpp  typechecker.hpp
kccc++/inc/: lexer.hpp
kccc++/src/: codegen.cpp  lexer.cpp
kcccxx/: .clang-format  CMakeLists.txt
kcccxx/inc/: ast.hpp  binop.hpp  codegen.hpp  lexer.hpp  parser.hpp  type.hpp  typechecker.hpp
kcccxx/src/: Makefile  ast.cpp  binop.cpp  codegen.cpp  kccc++.cpp  lexer.cpp  parser.cpp  type.cpp  typechecker.cpp
kceagec/: README.md
kceagec/src/: .gitignore  Makefile  helper.c  kceagec.kcea
src/: .gitignore  Makefile  ast.cpp  binop.cpp  codegen.cpp  lexer.cpp  lexing.l  parser.cpp  parsing.y  sample.__c  spccc.cpp  test.__c  type.cpp  typechecker.cpp
tools/docker/fenobcaml-env/: Dockerfile
tools/fenobcaml/: .gitignore  .ocp-indent  OMakefile
tools/fenobcaml/src/: OMakefile  lexer.mll  ling.ml  ling.mli  main.ml  memo.ml  parser.mly  syntax.ml  test.ebnf
